--- a/index.html
+++ b/index.html
@@ -1,76 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="./style.css?v=1" />
     <title>Juego | Piedra, papel o tijera</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <section class="principal">
-      <div class="puntajes">
-        <div class="puntaje-usuaria">
-          <h2>Usuario</h2>
-          <p>0</p>
+        <div class="puntajes">
+            <div class="puntaje-usuaria">
+                <h2>Usuario</h2>
+                <p>0</p>
+            </div>
+
+            <div class="puntaje-computadora">
+                <h2>Computadora</h2>
+                <p>0</p>
+            </div>
         </div>
 
-        <div class="puntaje-computadora">
-          <h2>Computadora</h2>
-          <p>0</p>
-        </div>
-      </div>
+        <div class="tablero">
 
-      <div class="tablero">
-        
-        <div class="manos">
-          <img
-            class="mano-usuaria"
-            src="./assets/piedra_user.png"
-            alt="Opción elegida por usuario"
-          />
-          <img
-            class="mano-computadora"
-            src="./assets/piedra_computadora.png"
-            alt="Opción elegida por computadora"
-          />
-        </div>
-        <h2 class="resultado">Seleccione una opción</h2>
+            <div class="manos">
+                <img class="mano-usuaria" src="./assets/piedra_user.png" alt="Opción elegida por usuario" />
+                <img class="mano-computadora" src="./assets/piedra_computadora.png" alt="Opción elegida por computadora" />
+            </div>
+            <h2 class="resultado">Seleccione una opción</h2>
 
-        <div class="opciones">
-          <button class="piedra">
+            <div class="opciones">
+                <button class="piedra">
             <img
               class="mano-usuaria"
               src="./assets/piedra_user.png"
               alt="Elegir piedra"
             />
           </button>
-          <button class="papel">
+                <button class="papel">
             <img
               class="mano-usuaria"
               src="./assets/papel_user.png"
               alt="Elegir papel"
             />
           </button>
-          <button class="tijera">
+                <button class="tijera">
             <img
               class="mano-usuaria"
               src="./assets/tijera_user.png"
               alt="Elegir tijera"
             />
           </button>
+            </div>
         </div>
-      </div>
 
-      <footer class="centrado">
-        <small>Hecho por 
+        <footer class="centrado">
+            <small>Hecho por 
           </small>
-      </footer>
+        </footer>
 
     </section>
 
     <script src="app.js"></script>
-  </body>
+</body>
+
 </html>
